# yapf-isort

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh  relative_coverage.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  flake8.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
tests/: conftest.py  isort.cfg  requirements.txt  test_generics.py  test_integration.py  test_quotes.py
tests/test_generics_/: test_generics_List_str__._py  test_generics_Mapping_str__int__._py  test_generics_Optional_Callable__Optional_str____Any___._py  test_generics_Tuple_int__int__str__float__str__int__bytes__._py  test_generics_Tuple_int__int__str__float__str__int__bytes__int__int__str__float__str__int__bytes__int__int__str__float__str__int__bytes__._py  test_generics_Union_str__int__float__._py  test_generics__Data___Union_None__str__bytes__MutableMapping_str__Any___Iterable_Tuple_str__Optional_str_____IO__._py  test_generics__ParamsMappingValueType___Union_str__bytes__int__float__Iterable_Union_str__bytes__int__float____._py
tests/test_integration_/: test_cli.yml  test_integration.yml
yapf_isort/: __init__.py  __main__.py  generics.py  quotes.py
