[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "yapf-isort"
version = "0.5.5"
description = "yapf 💌 isort"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/yapf-isort"
"Issue Tracker" = "https://github.com/domdfcoding/yapf-isort/issues"
"Source Code" = "https://github.com/domdfcoding/yapf-isort"

[project.scripts]
yapf_isort = "yapf_isort.__main__:main"
yapf-isort = "yapf_isort.__main__:main"
