[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "yapf-isort"
version = "0.5.5"
description = "yapf 💌 isort"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/yapf-isort"
"Issue Tracker" = "https://github.com/domdfcoding/yapf-isort/issues"
"Source Code" = "https://github.com/domdfcoding/yapf-isort"

[project.scripts]
yapf_isort = "yapf_isort.__main__:main"
yapf-isort = "yapf_isort.__main__:main"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "Apache-2.0"
package = "yapf_isort"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "Apache-2.0"
package = "yapf_isort"
