[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "yapf-isort"
version = "0.6.0"
description = "yapf 💌 isort"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/yapf-isort"
"Issue Tracker" = "https://github.com/domdfcoding/yapf-isort/issues"
"Source Code" = "https://github.com/domdfcoding/yapf-isort"

[project.scripts]
yapf_isort = "yapf_isort.__main__:main"
yapf-isort = "yapf_isort.__main__:main"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "Apache-2.0"
package = "yapf_isort"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "Apache-2.0"
package = "yapf_isort"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
