# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
[metadata]
name = yapf-isort
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = Apache Software License
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/yapf-isort
project_urls =
    Documentation = https://yapf-isort.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/yapf-isort/issues
    Source_Code = https://github.com/domdfcoding/yapf-isort
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True

[options.entry_points]
console_scripts = yapf_isort=yapf_isort.__main__:main
