# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[options.entry_points]
console_scripts =
    yapf_isort=yapf_isort.__main__:main
    yapf-isort=yapf_isort.__main__:main
